--- a/src/Components/CSS/Video.css
+++ b/src/Components/CSS/Video.css
@@ -3,7 +3,7 @@
     background: #ccc;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 92vh;
 }
 
 .videoDiv {
@@ -52,7 +52,6 @@
 }
 
 .orangeBar {
-    height: 10px;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -61,9 +60,19 @@
 }
 
 .orangeBarJuice {
-    height: 10px;
+    height: 100%;
     width: 0px;
     background-color: orangered;
+}
+
+.orangeBar {
+    height: 5px;
+    transition: all;
+    transition-duration: 0.5s;
+}
+
+.orangeBar:hover {
+    height: 8px;
 }
 
 #pause {
@@ -119,7 +128,7 @@
 }
 
 .volume {
-    visibility: hidden;
+    display: none;
     margin: 12px 8px 0px 2px;
     width: 100px;
     height: 10px;
@@ -174,11 +183,18 @@
     width: 260px;
 }
 
+.speed:hover>.speedDiv {
+    opacity: 1;
+    visibility: visible;
+}
+
 .speedDiv {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
     position: absolute;
     bottom: 60px;
-    right: 18%;
+    right: 1%;
     background-color: white;
     color: black;
     width: 410px;
@@ -186,6 +202,10 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    padding: 1% 0%;
+    padding: 0.3% 0%;
     cursor: pointer;
+}
+
+.speedDiv p:hover {
+    text-decoration: underline;
 }
