--- a/src/Components/CSS/Video.css
+++ b/src/Components/CSS/Video.css
@@ -92,7 +92,6 @@
 }
 
 .psTenS,
-.muteDiv,
 .fullScreenDiv,
 .speed,
 .settingsDiv {
@@ -127,12 +126,21 @@
     transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
+#notMute:hover>.volume {
+    opacity: 1;
+    visibility: visible;
+}
+
 .volume {
-    display: none;
-    margin: 12px 8px 0px 2px;
-    width: 100px;
-    height: 10px;
-    background-color: white;
+    opacity: 0;
+    visibility: hidden;
+    margin: 0px 0px 0px 8px;
+    width: 23px;
+    height: 150px;
+    position: absolute;
+    bottom: 40px;
+    border-radius: 5px;
+    background-color: gold;
     color: white;
     transition-property: all;
     transition-duration: 0.3s;
@@ -140,22 +148,16 @@
     transition-delay: 0.1s;
 }
 
-.volume:hover {
-    margin-top: 10px;
-    height: 15px;
+#netVol {
+    transform: rotate(270deg);
+    margin-left: -53px;
+    margin-top: 65px;
 }
 
 .volumeIconsDiv {
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
-
-#netVol {
-    float: right;
-    height: 100%;
-    background-color: orangered;
-    width: 24px;
 }
 
 #mute {
@@ -202,8 +204,11 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    padding: 0.3% 0%;
     cursor: pointer;
+}
+
+.speedDiv p {
+    margin: 10px 0px;
 }
 
 .speedDiv p:hover {
