--- a/src/Components/CSS/Video.css
+++ b/src/Components/CSS/Video.css
@@ -30,7 +30,7 @@
     width: 100%;
     flex-wrap: wrap;
     background: rgba(0, 0, 0, 0.7);
-    /* transform: translateY(100%); */
+    transform: translateY(100%);
     transition: all 0.5s;
 }
 
