--- a/src/Components/CSS/Nav.module.css
+++ b/src/Components/CSS/Nav.module.css
@@ -24,6 +24,7 @@
     font-weight: bold;
     animation: playBtnP 1s ease;
     animation-delay: 0.3s;
+    cursor: pointer;
 }
 
 @keyframes playBtnP {
