--- a/src/Components/CSS/Video.css
+++ b/src/Components/CSS/Video.css
@@ -196,8 +196,8 @@
 }
 
 .speedDiv {
-    /* opacity: 0;
-    visibility: hidden; */
+    opacity: 0;
+    visibility: hidden;
     display: flex;
     position: absolute;
     bottom: 40px;
